Changes in @NEW@
===============
API Changes
---------------------
* getPackageCreatorRecipe and savePackageCreatorRecipe have been added to the
  conary client. (RBL-3483)

Internal Changes
---------------------
* A new api method, newBuildWithOptions, has been added. (RBL-2959)
* Fixed a bug where a missing GROUP BY argument in an SQL statement was
  causing a traceback in MySQL. (RBL-2995)
* The default search settings in the web interface was not being set
  properly, causing no radio buttons to be selected in the interface.
  This has been corrected. (RBL-3002)
* The jobmaster now copies /etc/hosts into jobslaves. (RBL-2963)
* The backend now allows EC2 calls to be run using user supplied credentials.
  (RBL-3039)
* The user's EC2 credentials are now validated by the EC2 web service.
  (RBL-3038)
* The EC2 backend calls now have common error handling. (RBL-3043)
* A backend call has been added to get all AMI builds for a particular
  user. (RBL-3053)
* EC2 credentials and AMI launch permissions are now properly removed when a
  user account is removed. (RBL-3065)
* Modifying a user's product membership status now sets EC2 launch permissions 
  appropriately. (RBL-3062)
* Publishing and Unpublishing AMI images now sets EC2 launch permissions 
  appropriately. (RBL-3064)
* A bug that prevented non-admins from adding or modifying a product
  team member's permissions has been corrected (RBL-3146).
* A bug that caused the wrong versions of anaconda templates to be specified to
  the build system resulting in failed builds has been fixed.  (RBL-2763)
* Requests to http://<producthostname>.<rbuilderdomainname>/ now properly
  redirect to the product homepage even when the product is marked as
  private (RBL-3148).
* Private products now produce private EC2 Images. (RBL-3477)

Web Front End Changes
---------------------
* Product Version is now set as a view on the Product, affecting all pages that
  interact with the product version (RBL-3163)