@@ -159,11 +159,44 @@ class BuildsTable(database.KeyedTable):
                 return True
         return False
 
-    def getAllAMIBuilds(self, requestingUserId, limitToUserId=False):
+    def getAllBuildsByType(self, imageType, requestingUserId, 
+                           limitToUserId=False):
+        extraWhere = ''
+        # by default, we organize builds by sha1.  This assumes
+        # that builds have one file and that one file is the build.
+        # not sure how to deal w/ error logs being associated since
+        # we don't have an error status.
+        extraSelect = ', bdf.sha1'
+        extraJoin = ' JOIN buildFiles bdf ON (bdf.buildId = b.buildId)'
+        if imageType == 'AMI':
+            # cancel out sha1 join - we don't have any files with this build!
+            extraJoin = ''
 
+            # Extra selects:
+            # add in awsAccount if it exists.
+            extraSelect = ''', COALESCE(ud.value,'Unknown') AS awsAccountNumber,
+                             bd.value AS amiId'''
+            extraJoin += '''LEFT OUTER JOIN userData ud
+                            ON (b.createdBy = ud.userId
+                                AND ud.name = 'awsAccountNumber')'''
 
+            # make sure that this build has an amiId.  Since it doesn't
+            # have any files (thus no sha1), we need to know that it
+            # has an amiId to know it uploaded correctly
+            extraJoin += ''' JOIN buildData bd
+                             ON (bd.buildId  = b.buildId
+                                 AND bd.name = 'amiId')'''
+        elif imageType == 'VWS':
+            # VWS as a build type doesn't currently exist, but any
+            # image that is RAW_FS_IMAGE and build as a DOMU works.
+            imageType = 'RAW_FS_IMAGE'
+            extraJoin += ''' JOIN buildData bd ON (bd.buildId  = b.buildId
+                                                   AND bd.name = "XEN_DOMU")'''
+        try:
+            imageType = buildtypes.validBuildTypes[imageType]
+        except KeyError:
+            raise ParameterError('Unknown image type %r' % (imageType,))
         cu = self.db.cursor()
-
         # Get the list of hidden projects to accept if we need to filter
         okHiddenProjectIds = []
         if limitToUserId:
@@ -174,9 +207,9 @@ class BuildsTable(database.KeyedTable):
                  """, requestingUserId)
             okHiddenProjectIds = [result[0] for result in cu.fetchall()]
 
-        cu.execute("""
-             SELECT bd.value AS amiId,
-                    p.projectId,
+
+        query = """SELECT p.projectId,
+                    p.hostname,
                     b.buildId,
                     p.name AS productName,
                     p.description AS productDescription,
@@ -190,22 +223,25 @@ class BuildsTable(database.KeyedTable):
                         WHEN pu.level = 1 THEN 'Product Developer'
                         WHEN pu.level = 2 THEN 'Product User'
                         ELSE ''
-                    END AS role,
-                    COALESCE(ud.value,'Unknown') AS awsAccountNumber
-             FROM projects p
+                    END AS role
+                    %(extraSelect)s
+                 FROM projects p
                  JOIN builds b USING (projectId)
                  LEFT OUTER JOIN publishedReleases pr USING (pubReleaseId)
-                 JOIN buildData bd ON (bd.buildId = b.buildId)
                  LEFT OUTER JOIN users u ON (b.createdBy = u.userId)
                  LEFT OUTER JOIN projectUsers pu
                     ON (b.projectId = pu.projectId AND pu.userId = ?)
-                 LEFT OUTER JOIN userData ud
-                    ON (b.createdBy = ud.userId AND ud.name = 'awsAccountNumber')
-             WHERE bd.name = 'amiId' AND b.deleted = 0""",
-             requestingUserId)
-        return dict([(rs.pop('amiId'),rs) for rs in cu.fetchall_dict() \
+                 %(extraJoin)s
+             WHERE b.buildType == ? AND b.deleted = 0
+             %(extraWhere)s"""
+        query = query % {'extraWhere' : extraWhere,
+                         'extraSelect' : extraSelect,
+                         'extraJoin' : extraJoin}
+
+        cu.execute(query, requestingUserId, imageType)
+        return [ rs for rs in cu.fetchall_dict()
                 if self._filterBuildVisibility(rs, okHiddenProjectIds,
-                    limitToUserId)])
+                                               limitToUserId)]
 
     def getAMIBuildsForProject(self, projectId):
         published = []
@@ -223,54 +259,6 @@ class BuildsTable(database.KeyedTable):
             else:
                 unpublished.append(res[1])
         return published, unpublished
-
-    def getAllVwsBuilds(self, requestingUserId, limitToUserId=False):
-
-        cu = self.db.cursor()
-
-        # Get the list of hidden projects to accept if we need to filter
-        okHiddenProjectIds = []
-        if limitToUserId:
-            cu.execute("""
-                 SELECT pu.projectId
-                 FROM   projectUsers pu JOIN projects p USING (projectId)
-                 WHERE  p.hidden = 1 AND pu.userId = ?
-                 """, requestingUserId)
-            okHiddenProjectIds = [result[0] for result in cu.fetchall()]
-
-        cu.execute("""
-             SELECT p.projectId,
-                    p.hostname,
-                    b.buildId,
-                    bdf.sha1,
-                    p.name AS productName,
-                    p.description AS productDescription,
-                    b.name AS buildName,
-                    COALESCE(b.description,'') AS buildDescription,
-                    COALESCE(pr.timePublished,0) != 0 AS isPublished,
-                    p.hidden AS isPrivate,
-                    COALESCE(u.username, 'Unknown') AS createdBy,
-                    CASE
-                        WHEN pu.level = 0 THEN 'Product Owner'
-                        WHEN pu.level = 1 THEN 'Product Developer'
-                        WHEN pu.level = 2 THEN 'Product User'
-                        ELSE ''
-                    END AS role
-             FROM projects p
-                 JOIN builds b USING (projectId)
-                 LEFT OUTER JOIN publishedReleases pr USING (pubReleaseId)
-                 JOIN buildData bd ON (bd.buildId = b.buildId)
-                 JOIN buildFiles bdf ON (bdf.buildId = b.buildId)
-                 LEFT OUTER JOIN users u ON (b.createdBy = u.userId)
-                 LEFT OUTER JOIN projectUsers pu
-                    ON (b.projectId = pu.projectId AND pu.userId = ?)
-             WHERE b.buildType = ?
-                 AND bd.name = 'XEN_DOMU'
-                 AND b.deleted = 0""",
-             requestingUserId, buildtypes.RAW_FS_IMAGE)
-        return dict([(rs.pop('sha1'), rs) for rs in cu.fetchall_dict() \
-                if self._filterBuildVisibility(rs, okHiddenProjectIds,
-                    limitToUserId) and rs.get('sha1')])
 
 def getExtraFlags(buildFlavor):
     """Return a list of human-readable strings describing various
