@@ -907,6 +907,9 @@ class MintClient:
     def getAllAMIBuilds(self):
         return self.server.getAllAMIBuilds()
 
+    def getAllBuildsByType(self, buildType):
+        return self.server.getAllBuildsByType(buildType)
+
     def getAMIBuildsForUser(self, userId):
         return self.server.getAMIBuildsForUser(userId)
 
