@@ -5353,7 +5353,13 @@ If you would not like to be %s %s of this project, you may resign from this proj
         @rtype C{bool}
         """
         return self.setEC2CredentialsForUser(userId, '', '', '', True)
-        
+
+    @typeCheck(str)
+    @requiresAuth
+    def getAllBuildsByType(self, buildType):
+        return self.builds.getAllBuildsByType(buildType, self.auth.userId,
+                                              not self.auth.admin)
+
     @requiresAuth
     def getAllAMIBuilds(self):
         """
@@ -5391,8 +5397,9 @@ If you would not like to be %s %s of this project, you may resign from this proj
         @rtype: C{dict} of C{dict} objects (see above)
         @raises: C{PermissionDenied} if user is not logged in
         """
-        return self.builds.getAllAMIBuilds(self.auth.userId,
-                not self.auth.admin)
+        res =  self.builds.getAllBuildsByType('AMI', self.auth.userId,
+                                              not self.auth.admin)
+        return dict((x.pop('amiId'), x) for x in res)
 
     @typeCheck(int)
     @requiresAuth
@@ -5746,10 +5753,11 @@ If you would not like to be %s %s of this project, you may resign from this proj
                 self.cfg.basePath, 'downloadImage')
         urlTemplate = "http://%s?id=%%d" % url
 
-        res = self.builds.getAllVwsBuilds(self.auth.userId,
-                not self.auth.admin)
+        res = self.builds.getAllBuildsByType('VWS', self.auth.userId,
+                                                not self.auth.admin)
 
-        for buildData in res.itervalues():
+        resDict = {}
+        for buildData in res:
             # we want to drop the hostname. it was collected by the builds
             # module call for speed reasons
             hostname = buildData.pop('hostname')
@@ -5759,7 +5767,9 @@ If you would not like to be %s %s of this project, you may resign from this proj
             buildData['downloadUrl'] = urlTemplate % \
                     self.getBuildFilenames(buildId)[0]['fileId']
             buildData['baseFileName'] = self.getBuildBaseFileName(buildId)
-        return res
+            sha1 = buildData.pop('sha1')
+            resDict[sha1] = buildData
+        return resDict
 
     def getAvailablePlatforms(self):
         """
